# Corewar

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  abel.cor  cool_commands.txt  installer.sh
.github/workflows/: actions.yml
NEW/: CMakeLists.txt
NEW/include/: corewar.h  errors.h  structures.h  utils.h
NEW/libs/my_ctype/: my_isalnum.c  my_isalpha.c  my_isblank.c  my_iscntrl.c  my_isdigit.c  my_isgraph.c  my_islower.c  my_isprint.c  my_ispunct.c  my_isupper.c  my_tolower.c
NEW/libs/my_stdlib/: get_chunk_size.c  my_atof.c  my_atoi.c  my_atol.c  my_bytes_rev.c  my_calloc.c  my_div.c  my_free.c  my_malloc.h  my_reallocarray.c  my_strtol.c
NEW/libs/my_string/: my_c_to_bin.c  my_memchr.c  my_memcmp.c  my_memcpy.c  my_memrcpy.c  my_memset.c  my_str_to_word_array.c  my_stradd.c  my_strcasecmp.c  my_strcat.c  my_strchr.c  my_strcnb.c  my_strcpy.c  my_strcspn.c  my_strncat.c  my_strncmp.c  my_strncpy.c  my_strndup.c  my_strspn.c  my_strstr.c  str_array_len.c  str_tolower.c  str_toupper.c
NEW/libs/my_stype/: my_str_isalpha.c  my_str_isblank.c  my_str_isgraph.c  my_str_islower.c  my_str_isspace.c  my_str_isxdigit.c  my_str_tolower.c  my_stype.h
NEW/src/: check_args.c  errors.c  main.c
NEW/src/arena/: run_arena.c
NEW/src/utils/: my_puts.c  swap_endian.c  usage.c
bonus/: audio.c  bonus.c  parse_champion.c  transcribe_dot_s.c
bonus/champions/: Asombra.cor
bonus/include/: menu.h
bonus/menu/: menu.c
include/: arena.h  bonus.h  corewar.h  errors.h  game_info.h  menu.h  my_ctype.h  my_stdlib.h  my_string.h  my_stype.h  op.h  parsing.h  structures.h  utils.h
libs/: CMakeLists.txt  Makefile
libs/my_ctype/: Makefile  my_isspace.c  my_isxdigit.c  my_toupper.c  private.h
libs/my_stdlib/: Makefile  my_abs.c  my_calloc.c  my_fabs.c  my_free.c  my_getenv.c  my_itoa.c  my_labs.c  my_ldiv.c  my_ltoa.c  my_malloc.c  my_malloc.h  my_realloc.c  my_reallocarray.c  my_stdlib.h  my_strdup.c  my_strtod.c  private.h  str_array_len.c
libs/my_string/: Makefile  my_memccpy.c  my_memcpy.c  my_memmove.c  my_str_to_bin.c  my_strcmp.c  my_strdup.c  my_string.h  my_strlen.c  my_strpbrk.c  my_strrchr.c  my_strrev.c  my_strtok.c  str_to_word_array.c
libs/my_stype/: my_str_isalnum.c  my_str_isalpha.c  my_str_isblank.c  my_str_iscntrl.c  my_str_isdigit.c  my_str_isgraph.c  my_str_islower.c  my_str_isprint.c  my_str_ispunct.c  my_str_isspace.c  my_str_isupper.c  my_str_isxdigit.c  my_str_tolower.c  my_str_toupper.c  private.h
src/: check_args.c  debugging.c  distribute_robots.c  errors.c  main.c  my_puts.c  op.c  run_corewar.c  swap_endian.c  usage.c
src/arena/: add_instruction.c  aff_instruction.c  and_instruction.c  arena.c  fork_instruction.c  handle_processes.c  instructions.c  ld_instruction.c  ldi_instruction.c  live_instruction.c  not_instruction.c  or_instruction.c  run_arena.c  st_instruction.c  sti_instruction.c  sub_instruction.c  xor_instruction.c  zjmp_instruction.c
src/arena/instructions/: add_instruction.c  aff_instruction.c  and_instruction.c  fork_instruction.c  ld_instruction.c  ldi_instruction.c  live_instruction.c  not_instruction.c  or_instruction.c  st_instruction.c  sti_instruction.c  zjmp_instruction.c
src/graphic/: audio.c  graphic_display.c  parse_champion.c  transcribe_dot_s.c
src/graphic/menu/: menu.c
src/parsing/: analyze_memory.c  parse_champions.c  parse_params.c  parse_special_params.c
src/parsing/utils/: debug_parser.c  int_bin_str.c  parse_params.c
src/utils/: arena_utils.c  debug_parser.c  debugging.c  distribute_robots.c  errors.c  free_data.c  my_puts.c  my_str_isdigit.c  parsing_utils.c  run_corewar.c  str_array_len.c  swap_endian.c  usage.c
tests/: rename_memory_buffers.c  tests_corewar.c  tests_lib.c  tests_parsing.c
