cmake_minimum_required(VERSION 3.10.0)

project(mystd)

add_library(mystd STATIC
    my_ctype/my_isalnum.c
    my_ctype/my_isalpha.c
    my_ctype/my_isblank.c
    my_ctype/my_iscntrl.c
    my_ctype/my_isdigit.c
    my_ctype/my_isgraph.c
    my_ctype/my_islower.c
    my_ctype/my_isprint.c
    my_ctype/my_ispunct.c
    my_ctype/my_isspace.c
    my_ctype/my_isupper.c
    my_ctype/my_isxdigit.c
    my_ctype/my_tolower.c
    my_ctype/my_toupper.c
    my_stdlib/my_abs.c
    my_stdlib/my_atof.c
    my_stdlib/my_atoi.c
    my_stdlib/my_atol.c
    my_stdlib/my_bytes_rev.c
    my_stdlib/my_calloc.c
    my_stdlib/my_div.c
    my_stdlib/my_fabs.c
    my_stdlib/my_free.c
    my_stdlib/my_getenv.c
    my_stdlib/my_itoa.c
    my_stdlib/my_labs.c
    my_stdlib/my_ldiv.c
    my_stdlib/my_ltoa.c
    my_stdlib/my_malloc.c
    my_stdlib/my_reallocarray.c
    my_stdlib/my_realloc.c
    my_stdlib/my_strtod.c
    my_stdlib/my_strtol.c
    my_string/my_c_to_bin.c
    my_string/my_memccpy.c
    my_string/my_memchr.c
    my_string/my_memcmp.c
    my_string/my_memcpy.c
    my_string/my_memmove.c
    my_string/my_memrcpy.c
    my_string/my_memset.c
    my_string/my_stradd.c
    my_string/my_strcasecmp.c
    my_string/my_strcat.c
    my_string/my_strchr.c
    my_string/my_strcmp.c
    my_string/my_strcnb.c
    my_string/my_strcpy.c
    my_string/my_strcspn.c
    my_string/my_strdup.c
    my_string/my_strlen.c
    my_string/my_strncat.c
    my_string/my_strncmp.c
    my_string/my_strncpy.c
    my_string/my_strndup.c
    my_string/my_strpbrk.c
    my_string/my_strrchr.c
    my_string/my_strrev.c
    my_string/my_strspn.c
    my_string/my_strstr.c
    my_string/my_str_to_bin.c
    my_string/my_strtok.c
    my_string/str_array_len.c
    my_string/str_tolower.c
    my_string/str_toupper.c
    my_stype/my_str_isalnum.c
    my_stype/my_str_isalpha.c
    my_stype/my_str_isblank.c
    my_stype/my_str_iscntrl.c
    my_stype/my_str_isdigit.c
    my_stype/my_str_isgraph.c
    my_stype/my_str_islower.c
    my_stype/my_str_isprint.c
    my_stype/my_str_ispunct.c
    my_stype/my_str_isspace.c
    my_stype/my_str_isupper.c
    my_stype/my_str_isxdigit.c
    my_stype/my_str_tolower.c
    my_stype/my_str_toupper.c
)

target_include_directories(mystd PRIVATE ../include)
